0032341: Coding Rules - eliminate GCC11 compiler warnings -Wmaybe-uninitialized